<resources>
    <string name="app_name">Read\nKeeper</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Search: {keyword}</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_reading">Reading</string>
    <string name="title_wish">Wish</string>
    <string name="title_archived">Archived</string>
    <string name="title_setting">Setting</string>
    <string name="title_mybooks">My Books</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="image_content">Book Cover Image</string>
    <string name="rate_text">Rating: %.2f</string>
    <string name="add">Add</string>
    <string name="add_to">"Added %s to %s"</string>
    <string name="snackbar_delete_message">"<![CDATA[<font color=\"#BB86FC\">%s</font> is deleted"]]></string>
    <string name="reading_progress_title">Reading Progress</string>
    <string name="progress_html"><![CDATA[<big>You\'re on <font color=#03DAC5><b>%d</b></font> of <b>%d</b> pages</big>]]></string>
    <string name="update_progress">Update Reading Process</string>
    <string name="update">Update</string>
    <string name="current_progress">Current progress</string>
    <string name="book_total_pages">Total book pages</string>
    <string name="book_type_list_title">Read the book on:</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>

</resources>